# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  config_parser.py  maze.txt  mazegen-1.0.0-py3-none-any.whl  mazegen.py  output_maze.txt  pyproject.toml  read_confs.py  readme.md  requirements.txt  vars.py  visualizer.py
.claude/: settings.json
MazeGenerator_new/: MazeGenerator.py  __init__.py  vars.py
docs/: cell-painting-fix.md
mazegen/: MazeGenerator.py  __init__.py  __main__.py  config_parser.py  vars.py  visualizer.py
