[build-system]
# The tools pip needs to BUILD the package, and which backend to call.
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Package metadata (PEP 621 standard format).
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator (recursive backtracker)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "João Sampaio", email = "joasampa@student.42lisboa.com" },
    { name = "Manuel Romão", email = "mromao-s@student.42lisboa.com" },
]

[project.scripts]
mazegen = "mazegen.__main__:main"

[tool.setuptools]
packages = ["mazegen"]
